--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  font-family: "Oswald", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   background-color: var(--bg);
   color: #ffffff;
 }
