--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 :root {
-  --primary: #e7d849;
+  --primary: #b8ab2e;
   --bg: #ffe082;
 }
 
