--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
   transform: scaleX(0.5);
 }
 
-<h1 style="margin-top:70px;">Kenalan yuk!</h1>
+#hero h1 {margin-top: 50px;}      
 
 /* Media Queries */
 
